comeco da dash do feedback

--- a/site/public/feedbackDash.html
+++ b/site/public/feedbackDash.html
@@ -284,7 +284,6 @@
             <div class="fundo-escolher-filtro" style="display: none;" id="id_fundo_adicionar_filtro_feedback">
 
                 <div class="escolher-filtro">
-
                     <div id="divAdicionarFeedback" class="btn-sair" onclick="fecharAdicionarFiltro(this)">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                             class="bi bi-x-lg" viewBox="0 0 16 16">
@@ -300,7 +299,7 @@
                             <h1>Nome do filtro</h1>
                         </div>
                         <div class="contem-escolhe-filtro">
-                            <input id="nomeNovoFiltro" type="text">
+                            <input id="nomeEditarFiltro" type="text">
                         </div>
                     </div>
 
@@ -373,7 +372,109 @@
                     </div>
 
                     <div id="divAdicionarFeedbackEnviar" class="filtro-btn"
-                        onclick="adicionarFiltroPersonalizado(this)">
+                        onclick="adicionarFiltroPersonalizado(true)">
+
+                        <h1>Adicionar Filtro</h1>
+
+                    </div>
+
+                </div>
+            </div>
+            <div class="fundo-escolher-filtro" style="display: none;" id="id_fundo_editar_filtro">
+
+                <div class="escolher-filtro">
+                    <h1>
+                        Edtiar filtro
+                    </h1>
+                    <div id="divAdicionarFeedback" class="btn-sair" onclick="fecharAdicionarFiltro(this)">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                            class="bi bi-x-lg" viewBox="0 0 16 16">
+                            <path
+                                d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z" />
+                        </svg>
+                    </div>
+
+                    <!-- Tentei fazer o filtro funcionar mas n consegui, pelo menos tentei estruturar cada um em uma DIV -->
+
+                    <div class="filtro-text">
+                        <div class="titulo-filtro">
+                            <h1>Nome do filtro</h1>
+                        </div>
+                        <div class="contem-escolhe-filtro">
+                            <input id="nomeNovoFiltro" type="text">
+                        </div>
+                    </div>
+
+                    <div class="filtro-text">
+                        <div class="titulo-filtro">
+                            <h1>Município Principal</h1>
+                        </div>
+                        <div class="contem-escolhe-filtro">
+                            <select name="" class="select-opt" id="municipioEditarFiltro">
+                                <option></option>
+                                <option value="São Paulo">São Paulo</option>
+                                <option value="Santo Andre">Santo Andre</option>
+                                <option value="São Caetano">São Caetano</option>
+                                <option value="Campinas">Campinas</option>
+                                <option value="Piracicaba">Piracicaba</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="filtro-text">
+                        <div class="titulo-filtro">
+                            <h1>Região Desejada</h1>
+                        </div>
+                        <div class="contem-escolhe-filtro">
+                            <select name="" class="select-opt" id="regiaoEditarFiltro">
+                                <option></option>
+                                <option value="Sul">Sul</option>
+                                <option value="">Centro-Oeste</option>
+                                <option value="">Norte</option>
+                                <option value="">Nordeste</option>
+                                <option value="Leste">Leste</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="filtro-text">
+                        <div class="titulo-filtro">
+                            <h1>Ano Desejado</h1>
+                        </div>
+                        <div class="contem-escolhe-filtro">
+                            <select name="" class="select-opt" id="anoEditarFiltro">
+                                <option></option>
+                                <option value="2024">2024</option>
+                                <option value="2023">2023</option>
+                                <option value="2022">2022</option>
+                                <option value="2021">2021</option>
+                                <option value="2020">2020</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="filtro-text">
+                        <div class="titulo-filtro">
+                            <h1>Mês Desejado</h1>
+                        </div>
+                        <div class="contem-escolhe-filtro">
+                            <select name="" class="select-opt" id="mesEditarFiltro">
+                                <option></option>
+                                <option value="Janeiro">Janeiro</option>
+                                <option value="Fevereiro">Fevereiro</option>
+                                <option value="Março">Março</option>
+                                <option value="Abril">Abril</option>
+                                <option value="Maio">Maio</option>
+                                <option value="Junho">Junho</option>
+                                <option value="Julho">Julho</option>
+                                <option value="Agosto">Agosto</option>
+                                <option value="Setembro">Setembro</option>
+                                <option value="Outubro">Outubro</option>
+                                <option value="Novembro">Novembro</option>
+                                <option value="Dezembro">Dezembro</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div id="divAdicionarFeedbackEnviar" class="filtro-btn"
+                        onclick="editarFiltro()">
 
                         <h1>Adicionar Filtro</h1>
 
@@ -718,4 +819,4 @@
 <script src="./js/script.js"></script>
 <script src="./js/paginaPrincipal.js"></script>
 <script src="./js/navegarSite.js"></script>
-<script src="./js/filtrosPersonalizados.js"></script>
+<script type="module" src="./js/filtrosPersonalizados.js"></script>
