--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -210,9 +210,9 @@
                             <select name="" class="select-opt" id="filtroRegiao">
                                 <option></option>
                                 <option value="Sul">Sul</option>
-                                <option value="">Centro-Oeste</option>
-                                <option value="">Norte</option>
-                                <option value="">Nordeste</option>
+                                <option value="Centro-Oeste">Centro-Oeste</option>
+                                <option value="Norte">Norte</option>
+                                <option value="Nordeste">Nordeste</option>
                                 <option value="Leste">Leste</option>
                             </select>
                         </div>
@@ -271,83 +271,67 @@
             <!-- MOBILE -->
 
             <div class="primeira-divisao-kpi">
-                <div class="primeira-kpi">
+    <div class="primeira-kpi">
+        <div class="titulo-kpi">
+            <h1 id="m-kpi1-title">Município mais Poluído</h1>
+        </div>
+        <div class="dado-kpi">
+            <h1 id="m-kpi1-value">--</h1>
+        </div>
+    </div>
 
-                    <div class="titulo-kpi">
-                        <h1 id="m-kpi1-title">Munícipio mais Poluído</h1>
-                    </div>
+    <div class="segunda-kpi" id="m-segunda-kpi">
+        <div class="titulo-kpi">
+            <h1 id="m-kpi2-title">Variação da Qualidade do Ar</h1>
+        </div>
+        <div class="dado-kpi">
+            <h1 id="m-kpi2-value">--</h1>
+        </div>
+    </div>
+</div>
 
-                    <div class="dado-kpi">
-                        <h1 id="m-kpi1-value">São Paulo</h1>
-                    </div>
+<div class="primeira-divisao-kpi">
+    <div class="terceira-kpi">
+        <div class="titulo-kpi">
+            <h1 id="m-kpi3-title">Ranking de Gás Poluente</h1>
+        </div>
+        <div class="dado-kpi">
+            <h1 id="m-kpi3-value">--</h1>
+        </div>
+    </div>
+</div>
 
-                </div>
-
-                <div class="segunda-kpi" id="m-segunda-kpi">
-
-                    <div class="titulo-kpi">
-                        <h1 id="m-kpi2-title">Munícipio com maior Indice de Doenças Respiratórias</h1>
-                    </div>
-
-                    <div class="dado-kpi">
-                        <h1 id="m-kpi2-value">São Paulo</h1>
-                    </div>
-
-                </div>
-            </div>
-            <div class="primeira-divisao-kpi">
-                <div class="terceira-kpi">
-
-                    <div class="titulo-kpi">
-                        <h1 id="m-kpi3-title">Valor Gasto com Doenças Respiratórias</h1>
-                    </div>
-
-                    <div class="dado-kpi">
-                        <h1 id="m-kpi3-value">R$ 15.000,00</h1>
-                    </div>
-
-                </div>
-            </div>
 
             <!-- DESKTOP -->
 
-            <div class="primeira-divisao-kpi2" style="display: none;">
-                <div class="primeira-kpi">
+           <div class="primeira-divisao-kpi2" style="display: none;">
+    <div class="primeira-kpi">
+        <div class="titulo-kpi">
+            <h1 id='kpi1-title'>Município mais Poluído</h1>
+        </div>
+        <div class="dado-kpi">
+            <h1 id="kpi1-value">--</h1>
+        </div>
+    </div>
 
-                    <div class="titulo-kpi">
-                        <h1 id='kpi1-title'>Munícipio mais Poluído</h1>
-                    </div>
+    <div class="segunda-kpi" id="segunda-kpi">
+        <div class="titulo-kpi">
+            <h1 id='kpi2-title'>Variação da Qualidade do Ar</h1>
+        </div>
+        <div class="dado-kpi">
+            <h1 id="kpi2-value">--</h1>
+        </div>
+    </div>
 
-                    <div class="dado-kpi">
-                        <h1 id="kpi1-value">São Paulo</h1>
-                    </div>
-
-                </div>
-
-                <div class="segunda-kpi" id="segunda-kpi">
-
-                    <div class="titulo-kpi">
-                        <h1 id='kpi2-title'> Maior Indíce Doenças Respiratórias</h1>
-                    </div>
-
-                    <div class="dado-kpi">
-                        <h1 id="kpi2-value">São Paulo</h1>
-                    </div>
-
-                </div>
-
-                <div class="terceira-kpi">
-
-                    <div class="titulo-kpi">
-                        <h1 id='kpi3-title'>Valor Gasto com Doenças Respiratórias</h1>
-                    </div>
-
-                    <div class="dado-kpi">
-                        <h1 id="kpi3-value">R$ 15.000,00</h1>
-                    </div>
-
-                </div>
-            </div>
+    <div class="terceira-kpi">
+        <div class="titulo-kpi">
+            <h1 id='kpi3-title'>Ranking de Gás Poluente</h1>
+        </div>
+        <div class="dado-kpi">
+            <h1 id="kpi3-value">--</h1>
+        </div>
+    </div>
+</div>
 
 
 
