--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -208,19 +208,7 @@
                     </div>
 
                     <div class="filtro-text">
-                        <div class="titulo-filtro">
-                            <h1>Município Principal</h1>
-                        </div>
-                        <div class="contem-escolhe-filtro">
-                            <select name="" class="select-opt" id="municipioNovoFiltro">
-                                <option></option>
-                                <option value="São Paulo">São Paulo</option>
-                                <option value="Santo Andre">Santo Andre</option>
-                                <option value="São Caetano">São Caetano</option>
-                                <option value="Campinas">Campinas</option>
-                                <option value="Piracicaba">Piracicaba</option>
-                            </select>
-                        </div>
+                        
                     </div>
                     <div class="filtro-text">
                         <div class="titulo-filtro">
@@ -230,9 +218,9 @@
                             <select name="" class="select-opt" id="regiaoNovoFiltro">
                                 <option></option>
                                 <option value="Sul">Sul</option>
-                                <option value="">Centro-Oeste</option>
-                                <option value="">Norte</option>
-                                <option value="">Nordeste</option>
+                                <option value="Centro-Oeste">Centro-Oeste</option>
+                                <option value="Norte">Norte</option>
+                                <option value="Nordeste">Nordeste</option>
                                 <option value="Leste">Leste</option>
                             </select>
                         </div>
@@ -275,7 +263,7 @@
                         </div>
                     </div>
 
-                    <div  class="filtro-btn" onclick="adicionarFiltroPersonalizado()">
+                    <div  class="filtro-btn" onclick="aplicarFiltroPadrao()">
 
                         <h1>Adicionar Filtro</h1>
 
@@ -356,7 +344,7 @@
                         </div>
                     </div>
 
-                    <div class="filtro-btn" onclick="atualizarDash()">
+                    <div class="filtro-btn" onclick="aplicarFiltroPadrao()">
 
                         <h1>Adicionar Filtro</h1>
 
@@ -472,4 +460,3 @@
 <script src="./js/paginaPrincipal.js"></script>
 <script src="./js/script.js"></script>
 <script src="./js/navegarSite.js"></script>
-<script src="./js/filtrosPersonalizados.js"></script>
