--- a/site/public/cadastroEmpresa.html
+++ b/site/public/cadastroEmpresa.html
@@ -195,29 +195,29 @@
                     <div class="contem-1">
                         <div class="contem-placeholder-dados">
                             <h3>Nome Fantasia</h3>
-                            <input type="text" class="place-holder">
+                            <input type="text" class="place-holder" id="nomeFantasia">
                         </div>
 
                         <div class="contem-placeholder-dados">
                             <h3>CNPJ</h3>
-                            <input type="text" class="place-holder">
+                            <input type="number" class="place-holder" id="numCnpj">
                         </div>
                     </div>
                     <div class="contem-2">
                         <div class="contem-placeholder-dados">
                             <h3>Nome da Empresa:</h3>
-                            <input type="text" class="place-holder">
+                            <input type="text" class="place-holder" id="nomeEmpresa">
                         </div>
 
                         <div class="contem-placeholder-dados">
                             <h3>E-mail de contato:</h3>
-                            <input type="text" class="place-holder">
+                            <input type="text" class="place-holder" id="emailEmpresa">
                         </div>
                     </div>
                     <div class="contem-extra">
                         <div class="contem-placeholder-dados">
                             <h3>Telefone de contato:</h3>
-                            <input type="text" class="place-holder">
+                            <input type="number" class="place-holder" id="telEmpresa">
                         </div>
                     </div>
 
@@ -229,7 +229,7 @@
         <div class="linha-divisoria"></div>
 
 
-        <div class="botao-cadastrar">
+        <div onclick="cadastrarEmpresa()" class="botao-cadastrar">
             <h3>CADASTRAR</h3>
         </div>
 
@@ -245,3 +245,4 @@
 <script src="./js/index.js"></script>
 <script src="./js/script.js"></script>
 <script src="./js/navegarSite.js"></script>
+<script src="./js/cadastroEmpresa.js"></script>
