Inicio web-data-viz Login

--- a/site/public/autenticacao.html
+++ b/site/public/autenticacao.html
@@ -78,7 +78,7 @@
     <div class="sign-up-rightside">
       <div class="sign-up-form" id="form">
         <h1 id="formHeader">Entrar</h1>
-        <input id="inputCnpj" placeholder="Cnpj" type="text">
+        <input id="inputEmail" placeholder="Email" type="text">
         <span class="error-span" id="cnpjErrorSpan"></span>
         <input id="inputLoginPassword" placeholder="Insira sua senha" type="password">
         <span class="error-span" id="passwordErrorSpan"></span>
