atualiza o banco e a rota de adicao de feedback

--- a/site/public/feedback.html
+++ b/site/public/feedback.html
@@ -120,9 +120,9 @@
               Indústrias
             </option>
           </select>
-          <select id="selectMunicipios">
+          <select id="selectRegioes">
             <option value="#">
-              Qual seu municipio ?
+              Qual sua região ?
             </option>
           </select>    
         </div>
