--- a/site/public/cadastroPersona.html
+++ b/site/public/cadastroPersona.html
@@ -275,7 +275,7 @@
 
 </html>
 
-<script src="./js/index.js"></script>
+<script type="module" src="./js/index.js"></script>
 <script src="./js/script.js"></script>
 <script src="./js/navegarSite.js"></script>
 <script src="./js/validacoesCadastro.js"></script>
