--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -40,7 +40,7 @@
             <a onclick="goToComentarios()">
                 Comentários
             </a>
-            <a href="./cadastroPersona.html">
+            <a onclick="goToCadastrar()">
                 Cadastrar
             </a>
             <div onclick="showNotifications()" class="contem-alerta">
