--- a/site/public/feedbackDash.html
+++ b/site/public/feedbackDash.html
@@ -584,60 +584,8 @@
 
             <!-- EXIBIR COMENTÁRIOS -->
 
-            <div class="contem-comentarios">
-                <div class="comentario">
-                    <div class="cabecalho">
-                        <div class="cabecalho-municipio">
-                            <p>Munícipio:</p>
-                            <p>São Caetano do Sul</p>
-                        </div>
-                        <div class="cabecalho-poluente">
-                            <p>Poluidor:</p>
-                            <p>CO2</p>
-                        </div>
-                    </div>
-                    <div class="descricao">
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate molestias magnam,
-                            tempora illum optio deleniti ipsum, itaque iusto dolorem aliquid delectus quo sint ratione
-                            odio est quis unde veritatis cumque.
-                        </p>
-                    </div>
-                </div>
-                <div class="comentario">
-                    <div class="cabecalho">
-                        <div class="cabecalho-municipio">
-                            <p>Munícipio:</p>
-                            <p>São Caetano do Sul</p>
-                        </div>
-                        <div class="cabecalho-poluente">
-                            <p>Poluidor:</p>
-                            <p>CO2</p>
-                        </div>
-                    </div>
-                    <div class="descricao">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate molestias magnam,
-                            tempora illum optio deleniti ipsum, itaque iusto dolorem aliquid delectus quo sint ratione
-                            odio est quis unde veritatis cumque.</p>
-                    </div>
-                </div>
-                <div class="comentario">
-                    <div class="cabecalho">
-                        <div class="cabecalho-municipio">
-                            <p>Munícipio:</p>
-                            <p>São Caetano do Sul</p>
-                        </div>
-                        <div class="cabecalho-poluente">
-                            <p>Poluidor:</p>
-                            <p>CO2</p>
-                        </div>
-                    </div>
-                    <div class="descricao">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate molestias magnam,
-                            tempora illum optio deleniti ipsum, itaque iusto dolorem aliquid delectus quo sint ratione
-                            odio est quis unde veritatis cumque.</p>
-                    </div>
-                </div>
+            <div id="divComentarios" class="contem-comentarios">
+               
             </div>
 
         </div>
