Filtro funcionando 100% (Até onde eu sei), tirei filtro na tela de comentários e ajustes no nome das regiões no HTML

--- a/site/public/feedbackDash.html
+++ b/site/public/feedbackDash.html
@@ -173,13 +173,13 @@
 
         <div class="filtro">
 
-            <div class="filtroSelecionado">
+            <!-- <div class="filtroSelecionado">
                 <h1><a id="mesFeedback">Janeiro</a> de <a id="anoFeedback">2024</a>, <a id="municipioFeedback">São
                         Paulo</a></h1>
-            </div>
+            </div> -->
 
             <!-- AO CLICAR VAI ABRIR UMA DIV NO CENTRO COM OS GRÁFICOS E O FUNDO FICARÁ DESFOCADO -->
-            <div class="filtro-aplicado" style="display: flex;" id="id_filtro_aplicado" onclick="abrirFiltro()">
+            <!-- <div class="filtro-aplicado" style="display: flex;" id="id_filtro_aplicado" onclick="abrirFiltro()">
 
                 <div class="img-filtro">
                     <img id="id-img-filtro" width="100%" src="./assets/img-filtro.png" alt="Imagem do Filtro">
@@ -189,7 +189,7 @@
                     <h1>Filtros</h1>
                 </div>
 
-            </div>
+            </div> -->
 
             <div class="fundo-escolher-filtro" style="display: none;" id="id_fundo_escolher_filtro">
 
@@ -595,14 +595,14 @@
 
     </div>
     </div>
-    <div class="filtro-personalizado-container" id="filtroPersonalizadoContainer">
+    <!-- <div class="filtro-personalizado-container" id="filtroPersonalizadoContainer">
         <button class="filtro-personalizado-btn" onclick="toggleFiltroPersonalizado()">Filtros Salvos ⤴︎</button>
         <div class="filtro-personalizado-lista" id="filtroPersonalizadoLista">
             <ul id="listaFiltrosPersonalizados">
 
             </ul>
         </div>
-    </div>
+    </div> -->
 
 </body>
 
