Revert "Filtro funcionando 100% (Até onde eu sei), tirei filtro na tela de comentários e ajustes no nome das regiões no HTML"
This reverts commit 59f4ad459755f33b1b54c5f67cc11ac83c28f778.

--- a/site/public/paginaPrincipal.html
+++ b/site/public/paginaPrincipal.html
@@ -40,7 +40,7 @@
             <a onclick="goToComentarios()">
                 Comentários
             </a>
-            <a href="./cadastroPersona.html">
+            <a onclick="goToCadastrar()">
                 Cadastrar
             </a>
             <div onclick="showNotifications()" class="contem-alerta">
@@ -168,7 +168,7 @@
         <div class="filtro">
 
             <div class="filtroSelecionado">
-                <h1><a id="mesFiltro">Janeiro</a> de <a id="anoFiltro">2024</a>, região <a id="regiaoFiltro">São
+                <h1><a id="mesFeedback">Janeiro</a> de <a id="anoFeedback">2024</a>, <a id="municipioFeedback">São
                         Paulo</a></h1>
             </div>
 
@@ -206,21 +206,11 @@
                         <div class="contem-escolhe-filtro">
                             <select name="" class="select-opt" id="regiaoDesejada">
                                 <option></option>
-                                <option value="ABC">ABC</option>
-                                <option value="Grande São Paulo">Grande São Paulo</option>
-                                <option value="Vale do Paraíba">Vale do Paraíba</option>
-                                <option value="Campinas">Campinas</option>
-                                <option value="Sorocaba">Sorocaba</option>
-                                <option value="Baixada Santista">Baixada Santista</option>
-                                <option value="Ribeirão Preto">Ribeirão Preto</option>
-                                <option value="São Carlos">São Carlos</option>
-                                <option value="Bauru">Bauru</option>
-                                <option value="Marília">Marília</option>
-                                <option value="Araçatuba">Araçatuba</option>
-                                <option value="Presidente Prudente">Presidente Prudente</option>
-                                <option value="São José do Rio Preto">São José do Rio Preto</option>
-                                <option value="Piracicaba">Piracicaba</option>
-                                <option value="OutrasRegioes">OutrasRegioes</option>
+                                <option value="Sul">Sul</option>
+                                <option value="centro">Centro-Oeste</option>
+                                <option value="norte">Norte</option>
+                                <option value="nordeste">Nordeste</option>
+                                <option value="Leste">Leste</option>
                             </select>
                         </div>
                     </div>
@@ -303,21 +293,11 @@
                         <div class="contem-escolhe-filtro">
                             <select name="" class="select-opt" id="regiaoDesejadaEditar">
                                 <option></option>
-                                <option value="ABC">ABC</option>
-                                <option value="Grande São Paulo">Grande São Paulo</option>
-                                <option value="Vale do Paraíba">Vale do Paraíba</option>
-                                <option value="Campinas">Campinas</option>
-                                <option value="Sorocaba">Sorocaba</option>
-                                <option value="Baixada Santista">Baixada Santista</option>
-                                <option value="Ribeirão Preto">Ribeirão Preto</option>
-                                <option value="São Carlos">São Carlos</option>
-                                <option value="Bauru">Bauru</option>
-                                <option value="Marília">Marília</option>
-                                <option value="Araçatuba">Araçatuba</option>
-                                <option value="Presidente Prudente">Presidente Prudente</option>
-                                <option value="São José do Rio Preto">São José do Rio Preto</option>
-                                <option value="Piracicaba">Piracicaba</option>
-                                <option value="OutrasRegioes">OutrasRegioes</option>
+                                <option value="Sul">Sul</option>
+                                <option value="centro">Centro-Oeste</option>
+                                <option value="norte">Norte</option>
+                                <option value="nordeste">Nordeste</option>
+                                <option value="Leste">Leste</option>
                             </select>
                         </div>
                     </div>
