dependendo do usuario, se é respira sao paulo ou nao, gerente ou nao o direcionamento de cadastrar é alterado

--- a/site/public/cadastroEmpresa.html
+++ b/site/public/cadastroEmpresa.html
@@ -49,7 +49,7 @@
             <a onclick="goToComentarios()">
                 Comentários
             </a>
-            <a class="nav-selected" href="./cadastroPersona.html">
+            <a onclick="goToCadastrar()">
                 Cadastrar
             </a>
             <div onclick="showNotifications()" class="contem-alerta">
