--- a/site/public/feedbackDash.html
+++ b/site/public/feedbackDash.html
@@ -45,7 +45,7 @@
             <a class="nav-selected" onclick="goToComentarios()">
                 Comentários
             </a>
-            <a href="./cadastroPersona.html">
+            <a onclick="goToCadastrar()">
                 Cadastrar
             </a>
             <div onclick="showNotifications()" class="contem-alerta">
