--- a/site/public/cadastroPersona.html
+++ b/site/public/cadastroPersona.html
@@ -43,7 +43,7 @@
             <a onclick="goToComentarios()">
                 Comentários
             </a>
-            <a class="nav-selected" href="./cadastroPersona.html">
+            <a class="nav-selected" onclick="goToCadastrar()">
                 Cadastrar
             </a>
             <div onclick="showNotifications()" class="contem-alerta">
