--- a/site/public/notificacoes.html
+++ b/site/public/notificacoes.html
@@ -33,7 +33,7 @@
             <a onclick="goToComentarios(); openSidebar();">
                 Comentários
             </a>
-            <a href="./cadastroPersona.html">
+            <a onclick="goToCadastrar()">
                 Cadastrar
             </a>
             <div onmouseenter="showNotifications()" class="contem-alerta">
