--- a/site/public/verUsuario.html
+++ b/site/public/verUsuario.html
@@ -29,7 +29,7 @@
         
        
 
-        <!-- NAV BAR DESKTOP -->
+
 
         <div class="nav-bar-links-container" style="display: none;">
 
@@ -39,7 +39,7 @@
             <a onclick="goToComentarios()">
                 Comentários
             </a>
-            <a  href="./cadastroPersona.html">
+            <a  onclick="goToCadastrar()">
                 Cadastrar
             </a>
             <div onclick="showNotifications()" class="contem-alerta">
