Kpi e gráfico feedback 100% (Até onde eu sei)

--- a/site/public/feedbackDash.html
+++ b/site/public/feedbackDash.html
@@ -417,7 +417,7 @@
                 <div class="segunda-kpi">
 
                     <div class="titulo-kpi">
-                        <h1>Causa dominante</h1>
+                        <h1>Causa dominante (últimos 30 dias) </h1>
                     </div>
 
                     <div class="dado-kpi">
@@ -499,7 +499,7 @@
                 <div class="segunda-kpi">
 
                     <div class="titulo-kpi">
-                        <h1>Causa dominante</h1>
+                        <h1>Causa dominante (últimos 30 dias)</h1>
                     </div>
 
                     <div class="dado-kpi">
